# GLEngineRust

./: .gitignore  Cargo.toml
assets/shaders/: debug.frag  debug.geom  debug.vert  normal_mapping.frag  normal_mapping.vert  procedural.vert  shader.frag  skybox.frag
desktop/: Cargo.toml
desktop/assets/cl/: physics.cl  position_based_dynamics.cl
desktop/assets/shaders/: block.frag  block.vert  mobs.vert  orb.vert  particles.frag  particles.vert  procedural.frag  shader.frag  shader.vert  skybox.vert
desktop/render_gl_derive/src/: lib.rs
desktop/src/: main.rs  resources.rs  scene.rs
desktop/src/blocks/: block.rs  block_properties.rs  chunk_faces.rs  entities.rs  face.rs  face_orientation.rs  mod.rs  world.rs  world_blocks.rs  world_faces.rs  world_size.rs
desktop/src/compute_cl/: buffer.rs  context.rs  error.rs  kernel.rs  kernel_builder.rs  mod.rs  num.rs  program.rs
desktop/src/demos/: block_world.rs  mod.rs  parallax.rs  particles.rs  terrain.rs  triangle.rs
desktop/src/physics/: particles.rs
desktop/src/render_gl/: array_model.rs  buffer.rs  color_buffer.rs  data.rs  font.rs  fps.rs  gl_error.rs  input.rs  instanced_array_model.rs  instanced_logical_model.rs  instanced_model.rs  logical_model.rs  mod.rs  model.rs  model_data.rs  physics_model.rs  shader.rs  shapes.rs  terrain.rs  texture.rs  uniform_buffer.rs  util.rs
lib/gl/: Cargo.toml
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: main.rs  resources.rs  scene.rs
src/demos/: mod.rs  terrain.rs  triangle.rs
src/render_gl/: buffer.rs  (+10 more)
web/: Cargo.toml  index.html
(+2 files in other folders)
