[package]
name = "Rust"
version = "0.1.0"
authors = ["Alagris <alagris@gmail.com>"]
edition = "2018"

[dependencies]
gl = { path = "lib/gl" }
#gl = "0.12.0"
failure = "0.1.5"
render_gl_derive = { path = "render_gl_derive" }
nalgebra-glm = "0.3"
image = "0.22.1"
collada = "0.12.0"
obj = "0.9.0"
genmesh = "0.6.2"
rand = "0.7.3"
[dependencies.sdl2]
version = "0.32"
features = ["bundled", "static-link"]


[features]
#gl_debug = ["gl/debug"]

[build-dependencies]
walkdir = "2.1"